# gstCamera

./: CMakeLists.txt  LICENSE  ReadMe.md
camera/: gstCamera.cpp
cpp_for_ref/: example_rtsp.cpp  example_rtsp_server_client.cpp  hello.cpp  rtsp_client.cpp  rtspsrc_example.cpp  rtspsrc_example_2.cpp
include/: gst_camera.h  gst_camera_param.h
include/utils/: mt_utils.h
reference_data/: available_elm.list  rtspsrc_pad_cap.txt
src/: gst_camera.cpp
src/utils/: mt_utils.cpp
test/: CMakeLists.txt  test_my_gst_camera.cpp  test_rtspsrc.cpp  test_rtspsrc_cmd.cpp
tutorials/: CMakeLists.txt  ch12_streaming.cpp  ch2_concepts.cpp  ch3_dynamic_pipelines_pad.cpp  ch4_time_manage_seeking.cpp  ch5_gui_toolkit.cpp  ch6_media_format_and_pad_capabilities.cpp  ch7_multithread_pad_availability.cpp  ch8_short_cutting_the_pipeline.cpp  ch9_media_info_gathering.cpp  rtspsrc_example.cpp
